# agentic-dev-system

./: .gitignore  .python-version  PLAN.md  README.md  SPEC.md  pyproject.toml
.agent/config/: base.md  harness.toml
.wayfinder/: map.md
.wayfinder/references/: missions-factory-talk.md
.wayfinder/tickets/: 001-distill-canonical-spec-plan.md  002-core-phase-spine-contract.md  003-task-data-model-parallelism-seam.md  004-validation-contract-forgery-proof.md  005-observability-contract-live-feed.md  006-user-in-the-loop-contract.md  007-adapter-protocol-spine.md  008-build-spine-green-stub.md  009-prove-spine-claude-first-selfhost-tui.md
ads/: __init__.py  _literal.py  activity.py  cli.py  config.py  dispatch.py  driver.py  escalation.py  feed.py  firewall.py  layout.py  phase_json.py  prompt.py  reconcile.py  resume.py  sandbox.py  state.py  status.py  task_io.py  tasks.py  tui.py  validate.py  worktree.py
ads/adapters/: base.py  claude.py  claude_code.py  opencode.py  stub.py
legacy/ads/: cli.py  control.py  escalation.py  layout.py  prompt.py  reconcile.py  resplit.py  sandbox.py  tasks.py  tui.py
tests/: helpers.py  test_activity.py  test_claude_adapter.py  test_claude_code_adapter.py  test_cli_init.py  test_config.py  test_control.py  test_dispatch_tools.py  test_dispatch_worktree.py  test_driver_stub.py  test_end_to_end.py  test_escalation.py  test_firewall.py  test_opencode_adapter.py  test_reconcile.py  test_resplit.py  test_resume.py  test_sandbox.py  test_state.py  test_status.py  test_tasks.py  test_tui.py  test_validate.py
(+38 files in other folders)
